# rhaki-cw-template

./: Cargo.toml  Makefile.toml  READEM.d  README.md  cargo-generate.toml
contracts/template/: Cargo.toml
contracts/template/src/: contract.rs  lib.rs  msg.rs
deploy/: Cargo.toml
deploy/src/: data.rs
package/: Cargo.toml
template/: add_template.py
template/contract/src/: contract.rs
template/package/: package.rs
test/: Cargo.toml
test/src/: lib.rs
