[workspace]
members          = ["contracts/*"]

[workspace.dependencies]
cosmwasm-schema  = "1.1.3"
cosmwasm-std     = "1.1.3"
cosmwasm-storage = "1.1.3"
cw-storage-plus  = "1.0.1"
cw2              = "1.0.1"
schemars         = "0.8.10"
serde            = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror        = { version = "1.0.31" }

cw-multi-test    = "0.16.2"
