[workspace]
# let members inline
members          = ["package"]

[workspace.package]
version          = "0.1.0"
edition          = "2021"
authors          = ["{{authors}}"]


[workspace.dependencies]
cosmwasm-schema  = "1.5.0"
cosmwasm-std     = "1.5.0"
cw-storage-plus  = "1.2.0"
schemars         = "0.8.16"
serde            = { version = "1.0.194", default-features = false, features = ["derive"] }
thiserror        = "1.0.56"
rhaki-cw-plus    = "0.7.0"
{{crate_name}}-pkg = { path = "./package", version = "0.1.0"}

cw-multi-test    = "0.20.0"
